Job, Mukiza [#104613480] fixes misaligned label on filters

--- a/eums/client/less/general.less
+++ b/eums/client/less/general.less
@@ -209,8 +209,8 @@ h4.page-header {
   padding-left: 10px;
 }
 
-.pad-left-90 {
-  padding-left: 90px;
+.pad-left-0 {
+  padding-left: 5px !important;
 }
 
 .side-pad-left-20 {
